# STRIDER_MRG

./: .gitignore  CMakeLists.txt  Readme.md
acados/: mmap_manager.py  model.py  mpc_viewer.py  params.py  solver.py
acados/no_cot/: costs.py  model.py  params.py
acados/use_arm/: costs.py  model.py
acados/use_delta/: costs.py  model.py
acados/use_full/: costs.py  model.py
acados/yes_cot/: costs.py  model.py  params.py
apps/: main.cpp  strider_logger.py  strider_logger_mini.py
apps/bag_bin/: log.py
include/: dynamixel.hpp  gyro_ekf.hpp  mmap_logger.hpp  mpc_wrapper.hpp  opti.hpp  params.hpp  sbus.hpp  t265.hpp  teensy.hpp  utils.hpp
src/: dynamixel.cpp  mmap_logger.cpp  mpc_wrapper.cpp  opti.cpp  sbus.cpp  t265.cpp  teensy.cpp
src/geometry_ctrl/include/: fdcl_common_types.hpp  fdcl_control.hpp  fdcl_integral_utils.hpp  fdcl_matrix_utils.hpp
src/geometry_ctrl/src/: fdcl_control.cpp  fdcl_matrix_utils.cpp
